manifests/mojaloop-payment-manager/templates/ingress.yaml
---
# Source: mojaloop-payment-manager/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testname-mojaloop-payment-manager
  labels:
    app.kubernetes.io/name: mojaloop-payment-manager
    helm.sh/chart: mojaloop-payment-manager-10.0.2
    app.kubernetes.io/instance: testname
    app.kubernetes.io/version: "v10.0.2"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "pm4ml.local"
      http:
        paths:
          - path: /management-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: testname-mojaloop-payment-manager
                port:
                  name: http
