manifests/mojaloop-payment-manager/templates/testIngress.yaml
---
# Source: mojaloop-payment-manager/templates/testIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testname-mojaloop-payment-manager-test-ingress
  labels:
    app.kubernetes.io/name: mojaloop-payment-manager
    helm.sh/chart: mojaloop-payment-manager-10.0.2
    app.kubernetes.io/instance: testname
    app.kubernetes.io/version: "v10.0.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "pm4ml.test"
      http:
        paths:
          - path: /sim-backend-test(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: deployment-simulator-backend-service
                port:
                  name: testapi
          - path: /cc-send(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: deployment-core-connector-service
                port:
                  name: http
          - path: /mlcon-outbound(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: deployment-scheme-adapter-service
                port:
                  name: outboundapi
          - path: /mlcon-sdktest(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: deployment-scheme-adapter-service
                port:
                  name: testapi
          - path: /mgmt-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: deployment-pm4ml-management-api-service
                port:
                  name: testapi
